<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/button1"
                style="@style/AppTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/button1_text"
                android:onClick="buttonClick"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/button" />

            <ImageButton
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/button2_text"
                android:onClick="buttonClick"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/button" />

            <ImageButton
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/button3_text"
                android:cropToPadding="false"
                android:onClick="buttonClick"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/button1_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button1_text"
                android:textAlignment="center"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/button_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button2_text"
                android:textAlignment="center"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/button3_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button3_text"
                android:textAlignment="center"
                android:textColor="@android:color/black" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/button4_text"
                android:onClick="buttonClick"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/button" />

            <ImageButton
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/button5_text"
                android:onClick="buttonClick"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/button" />

            <ImageButton
                android:id="@+id/button6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/button6_text"
                android:onClick="buttonClick"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/button4_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button4_text"
                android:textAlignment="center"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/button5_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button5_text"
                android:textAlignment="center"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/button6_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button6_text"
                android:textAlignment="center"
                android:textColor="@android:color/black" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/button7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/button7_text"
                android:onClick="buttonClick"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/button" />

            <ImageButton
                android:id="@+id/button8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/button8_text"
                android:onClick="buttonClick"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/button" />

            <ImageButton
                android:id="@+id/button9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/button9_text"
                android:onClick="buttonClick"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/button7_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button7_text"
                android:textAlignment="center"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/button8_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button8_text"
                android:textAlignment="center"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/button9_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button9_text"
                android:textAlignment="center"
                android:textColor="@android:color/black" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>